--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react": "^16.5.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
@@ -76,8 +78,8 @@
     "lint-staged": "lint-staged",
     "lintcss": "stylelint --config .stylelintrc src/styles/**/*.scss",
     "lintjs": "eslint -c .eslintrc src/javascripts/**/*",
-    "styleguidist": "./node_modules/.bin/styleguidist server",
-    "styleguidist-build": "./node_modules/.bin/styleguidist build"
+    "styleguide": "./node_modules/.bin/styleguidist server",
+    "styleguide-build": "./node_modules/.bin/styleguidist build"
   },
   "jest": {
     "collectCoverageFrom": [
